--- a/Countries/MainWindow.xaml
+++ b/Countries/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Countries"
         mc:Ignorable="d"
         Title="Pokedex" Height="450" Width="800">
-    <Grid>
+    <Grid x:Name="mainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="47*"/>
             <ColumnDefinition Width="151*"/>
@@ -23,21 +23,27 @@
                         </WrapPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
-      
--->
+      -->
 
-                <!--observable collection  tous les pok qu'on va binder  dans itemsource-->
+        <!--observable collection  tous les pok qu'on va binder  dans itemsource-->
 
-                    <!--<Button Content="pokemon1" Width="169"/> -->
-                    <!--<Button Content="pokemon2" Width="169"/> -->
+        <!--<Button Content="pokemon1" Width="169"/> -->
+        <!--<Button Content="pokemon2" Width="169"/> -->
         <!--
             </ListView>
         </ScrollViewer> -->
-        <Image Source="Images/image1.jpg"  Height="Auto" Margin="0,-38,-32,-31" Grid.Column="1"/>
-        <!--<TextBox Text="{Binding MyValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="428,42,29,339" Grid.Column="1" TextChanged="TextBox_TextChanged" />-->
-        <ComboBox Name="CB" ItemsSource="{Binding Path=Collection}" Height="25" DisplayMemberPath="Name" SelectedItem="Path SelectedCountry" SelectionChanged="ComboBox_Selected" Margin="428,103,30,291" RenderTransformOrigin="1.171,0.46" Grid.Column="1" />
-        <!--<TextBox  HorizontalAlignment="Left" Margin="426,155,0,0" Text="{Binding ROBI, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Height="72" Width="148" Grid.Column="1" TextChanged="textBlock1_TextChanged"/>-->
-        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="426,246,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="59" Width="148" Grid.Column="1" />
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="73,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="83" Width="171" FontFamily="Pokemon"/>
+        <Image Source="https://lh3.googleusercontent.com/proxy/tWPiFelO8cdvnDE2-EFE3W9i5y2w0spp3yCmDn7K-YQgKz1jNs48SlYA0p51tLh1AwYgeXIWqFALWeyVLuyX9iM5vca5l1oUhICUqYgRfKPYaKaSN4EloBrCk3s5l_qYeQ"  Height="Auto" Margin="368,179,-38.4,0" Grid.Column="1" RenderTransformOrigin="0.5,0.5"/>
+        <ComboBox Name="CB" ItemsSource="{Binding Path=Collection}" DisplayMemberPath="Name" SelectedItem="Path SelectedCountry" SelectionChanged="ComboBox_Selected" Margin="73,36,384.6,353" RenderTransformOrigin="1.171,0.46" Grid.Column="1" />
+
+        <TextBlock x:Name="textBlockName" HorizontalAlignment="Left" Margin="44,95,0,0" TextWrapping="Wrap" Text="nom" VerticalAlignment="Top" Height="79" Width="234" Grid.Column="1" />
+        <TextBlock x:Name="textBlockGeneration" HorizontalAlignment="Left" Margin="44,179,0,0" TextWrapping="Wrap" Text="description" VerticalAlignment="Top" Height="59" Width="148" Grid.Column="1" />
+        <TextBlock x:Name="textBlockHistoire" HorizontalAlignment="Left" Margin="44,252,0,0" TextWrapping="Wrap" Text="histoire" VerticalAlignment="Top" Height="96" Width="354" Grid.Column="1" />
+        <TextBlock x:Name="textBlockType1" HorizontalAlignment="Left" Margin="192,95,0,0" TextWrapping="Wrap" Text="type" VerticalAlignment="Top" Height="27" Width="113" Grid.Column="1" />
+        <TextBlock x:Name="textBlockType2" HorizontalAlignment="Left" Margin="192,127,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="19" Width="113" Grid.Column="1" />
+
+        <Image x:Name="image1" Margin="376,36,132.6,298" Grid.Column="1" />
+        <Image x:Name="image2" Margin="478,36,31.6,298" Grid.Column="1" />
+        <Image x:Name="image1s" Margin="376,127,132.6,205" Grid.Column="1" />
+        <Image x:Name="image2s" Margin="473,127,31.6,205" Grid.Column="1" />
     </Grid>
 </Window>
